--- a/src/app/features/product/_components/view-product/view-product.component.scss
+++ b/src/app/features/product/_components/view-product/view-product.component.scss
@@ -418,3 +418,74 @@
 
   }
 }
+
+@media (max-width: 768px) {
+  .product-detail-wrapper {
+    flex-direction: row;
+ 
+
+    .product-left-section {
+      position: relative;
+      top: auto;
+      max-width: 100%;
+      .product-image-section {
+          gap: 50px;
+          justify-content: center;
+          .main-product-image {
+           max-width: 150px;
+        width: 100%;
+        border-radius: 5px;
+        flex-direction: column;
+          }
+          .thumbnail-container {
+            flex-direction: column;
+            overflow-x: auto;
+            gap: 10px;
+            margin-top: 0;
+            img {
+              width: 50px;
+              height: 50px;
+            }
+          }
+     }
+    
+
+    .product-actions {
+      flex-direction: column;
+      gap: 10px;
+      .btn{
+      width: 100%;
+      padding: 10px;
+      font-size: 0.9rem;
+      font-weight: 600;
+      border-radius: 6px;
+      .buy-now {
+        background-color: transparent;
+        color: #682f12;
+        border: 2px solid #682f12;
+      }
+    }
+
+    }
+
+    .product-content-section {
+      margin-top: 20px;
+      width: 100%;
+    }
+
+    .product-details {
+      h2 {
+        font-size: 1.5rem;
+      }
+}
+    }
+    .product-content-section {
+      margin-top: 20px;
+    }
+  }
+
+  .related-products-wrapper {
+    padding: 16px;
+  }
+  
+}
