--- a/src/app/features/settings/_components/order-history/order-history.component.scss
+++ b/src/app/features/settings/_components/order-history/order-history.component.scss
@@ -178,4 +178,34 @@
 }
 
 
+@media (max-width: 768px) {
+  .filter-group{
+     label {    display: none;
+}
+  }
+  .order-history {
+    padding: 1rem;
+    margin: 0 auto;
 
+    .title {
+      font-size: 20px;
+      margin-bottom: 1rem;
+    }
+
+    .order-count {
+      font-size: 12px;
+      padding: 2px 6px;
+    }
+
+    .pagination {
+      flex-direction: column;
+      align-items: center;
+
+      .page-btn {
+        width: 100%;
+        margin-bottom: 0.5rem;
+      }
+    }
+  }
+  
+}
