--- a/src/app/features/settings/_components/profile/profile.component.scss
+++ b/src/app/features/settings/_components/profile/profile.component.scss
@@ -137,3 +137,38 @@ $primary-brown: #682f12;
     border: none;
   }
 }
+
+@media(max-width: 768px) {
+  .profile-wrapper {
+    padding: 0.5rem;
+    margin: 0.5rem auto;
+    width: 350px;
+    .section{
+      h3 {
+        font-size: 16px;
+        margin-bottom: 0.5rem;
+        a{
+          float: right;
+        }
+      }
+    }
+        
+    .section {
+      h3 {
+        font-size: 16px;
+      }
+
+      input {
+        font-size: 14px;
+      }
+
+      button {
+        width: 100%;
+        padding: 12px;
+        font-size: 16px;
+        float: right;
+      }
+    }
+  }
+  
+}
