--- a/src/app/features/settings/_components/user-settings/user-settings.component.scss
+++ b/src/app/features/settings/_components/user-settings/user-settings.component.scss
@@ -104,3 +104,16 @@ $primary-brown: #682f12;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.04);
   border: 1px solid #eee;
 }
+
+.header-title {
+  font-size: 18px;
+  font-weight: 600;
+  color: #333;
+  margin-bottom: 1rem;
+}
+.section-content {
+  font-size: 14px;
+  color: #555;
+  display:flex;
+  line-height: 1.6;
+}
