--- a/src/app/shared/components/dialog/dialog.component.scss
+++ b/src/app/shared/components/dialog/dialog.component.scss
@@ -61,3 +61,34 @@
     background-color: #f8f8f8;
   }
 }
+
+@media (max-width: 768px) {
+  .dialog-container {
+    max-width: 90vw;
+    max-height: 80vh;
+  }
+
+  .close-button {
+    z-index: 9999;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 480px) {
+  .dialog-container {
+    max-width: 95vw;
+    max-height: 90vh;
+  }
+
+  .close-button {
+    top: 15px;
+    z-index: 9999;
+    right: 15px;
+    width: 45px;
+    height: 45px;
+    font-size: 1.75rem;
+  }
+}
