Changes Made as showing Problems

--- a/src/app/features/auth/_components/change-password/change-password.component.html
+++ b/src/app/features/auth/_components/change-password/change-password.component.html
@@ -22,7 +22,7 @@
         <mat-icon>{{ showNew ? 'visibility_off' : 'visibility' }}</mat-icon>
       </button>
     </div>
-    <div class="password-strength">Password strength: <span [class]="strengthClass">{{ passwordStrength() }}</span>
+    <div class="password-strength">Password strength: <span [class]="strengthClass()">{{ passwordStrength() }}</span>
     </div>
     <span class="error" *ngIf="isInvalid('newPassword')">New password is required.</span>
   </div>
