--- a/src/app/features/settings/_components/profile/profile.component.html
+++ b/src/app/features/settings/_components/profile/profile.component.html
@@ -43,10 +43,10 @@
 
     <!-- 👁️ View Mode -->
     <div class="view-fields" *ngIf="!isEditing">
-      <div class="view-box"><strong>Name:</strong> {{ profileForm?.value?.firstName }} {{ profileForm?.value.lastName }}</div>
-      <div class="view-box"><strong>Gender:</strong> {{ profileForm?.value.gender }}</div>
-      <div class="view-box"><strong>Email:</strong> {{ profileForm?.value.email }}</div>
-      <div class="view-box"><strong>Mobile:</strong> {{ profileForm?.value.phone }}</div>
+      <div class="view-box"><strong>Name:</strong> {{ profileForm.value.firstName }} {{ profileForm.value.lastName }}</div>
+      <div class="view-box"><strong>Gender:</strong> {{ profileForm.value.gender }}</div>
+      <div class="view-box"><strong>Email:</strong> {{ profileForm.value.email }}</div>
+      <div class="view-box"><strong>Mobile:</strong> {{ profileForm.value.phone }}</div>
     </div>
   </div>
 
